// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CenteredRow /> renders without crashing 1`] = `
<div
  className="CenteredRow-f3rx2f-0 hNpdbY"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</div>
`;

exports[`<CenteredRow /> renders without crashing when stackVertically is passed 1`] = `
<div
  className="CenteredRow-f3rx2f-0 hfFVle"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</div>
`;
